[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/UI/FuelMeter.gd" type="Script" id=1]
[ext_resource path="res://assets/2d/fuel_back.png" type="Texture" id=2]
[ext_resource path="res://assets/2d/fuel_msg.png" type="Texture" id=3]
[ext_resource path="res://assets/2d/fuel_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/2d/fuel_top.png" type="Texture" id=5]

[node name="FuelMeter" type="Control"]
margin_left = -14.1503
margin_top = 367.751
margin_right = 385.85
margin_bottom = 767.751
rect_min_size = Vector2( 400, 0 )
rect_scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="FuelBot" type="TextureRect" parent="."]
margin_left = 7.25507
margin_top = -36.2776
margin_right = 519.255
margin_bottom = 475.722
rect_scale = Vector2( 0.307933, 0.307933 )
texture = ExtResource( 2 )

[node name="FuelMsg" type="TextureRect" parent="."]
margin_left = 12.9471
margin_top = -27.5255
margin_right = 524.947
margin_bottom = 484.475
rect_scale = Vector2( 0.284519, 0.284519 )
texture = ExtResource( 3 )

[node name="FuelBar" type="TextureProgress" parent="."]
margin_left = 70.0
margin_top = -3.0
margin_right = 180.0
margin_bottom = 214.0
rect_scale = Vector2( 0.255097, 0.312515 )
texture_progress = ExtResource( 4 )
fill_mode = 3

[node name="FuelTop" type="TextureRect" parent="."]
margin_left = 7.25507
margin_top = -36.2776
margin_right = 519.255
margin_bottom = 475.722
rect_scale = Vector2( 0.307933, 0.307933 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
